# robot-kinematica

./: .gitignore  CMakeLists.txt  Readme.md
action/: al5dPosition.action
include/Al5dController/Highlevel/: HighLevelInterface.h
include/Al5dController/LowLevel/: LowLevelDriver.h  Servo.h
include/RobotController/: Kinematics.h  RobotController.h
include/RobotController/MatrixClass/: Matrix.hpp  Matrix.ipp
include/VisionController/: Calibration.h  ColorObject.h  ColorScale.h  ObjectDetector.h  VisionController.h
include/al5d_controller/: Kinematics.h  RobotController.h
include/al5d_controller/Highlevel/: HighLevelInterface.h  Position.h
include/al5d_controller/LowLevel/: LowLevelDriver.h  SerialCommunication.h  Servo.h
include/matrix_class/: Matrix.hpp  Matrix.ipp
include/vision/: Calibration.h  ColorObject.h  ColorScale.h  DestinationPlace.h  ObjectDetector.h  VisionController.h
msg/: found_object.msg
scripts/: application.launch
src/Al5dController/Highlevel/: HighLevelInterface.cpp
src/Al5dController/Lowlevel/: LowLevelDriver.cpp  Servo.cpp
src/RobotController/: Kinematics.cpp  RobotController.cpp
src/VisionController/: Calibration.cpp  ColorObject.cpp  ObjectDetector.cpp  VisionController.cpp
src/al5d_controller/: Kinematics.cpp  RobotController.cpp
src/al5d_controller/Highlevel/: HighLevelInterface.cpp  Position.cpp  ProgrammedPositions.csv
src/al5d_controller/Lowlevel/: LowLevelDriver.cpp  SerialCommunication.cpp  Servo.cpp
src/al5d_controller/Motionplanner/: Configuration.csv  MotionPlanner.cpp
src/vision/: Calibration.cpp  ColorObject.cpp  DestinationPlace.cpp  ObjectDetector.cpp  VisionController.cpp
srv/: found_object.srv  found_object1.srv
